# automatic-happiness

./: hello.txt  tuto.txt
tomato_kobuki/: CMakeLists.txt  README.md  package.xml
tomato_kobuki/include/kobuki_operation/: kobuki_operation.hpp
tomato_kobuki/launch/: tomato_cam.launch  tomato_kobuki_joy.launch
tomato_kobuki/src/: kobuki_operation.cpp  main.cpp
